# Haruki-Database-Backend

./: .gitignore  Dockerfile  README.md  app.py  go.mod  go.sum  haruki-db-configs.example.yaml  hypercorn.toml  main.go  main.py  pyproject.toml  swagger.yaml  utils.py
.github/workflows/: build.yml  docker.yml
api/: __init__.py  helper.go  struct.go  types.go  utils.py
api/bot/: helper.go  route.go  statistics.go  struct.go  user.go
api/censor/: helper.go  route.go  struct.go
api/chunithm/: alias.go  alias.py  binding.go  binding.py  core.py  db.py  db_engine.py  helper.go  music.go  music.py  route.go  schema.py  struct.go
api/chunithm/routes/: alias.py  binding.py  music.py
api/pjsk/: alias.go  alias.py  binding.go  binding.py  core.py  db.py  db_engine.py  helper.go  preference.go  preference.py  route.go  schema.py  struct.go
api/pjsk/routes/: alias.py  binding.py  character.py  music.py  preference.py
api/users/: helper.go  route.go  struct.go
config/: config.go
configs/: app.example.py  chunithm.example.py  pjsk.example.py  redis.example.py
database/: engine.go  manager.go
database/schema/bot/: client.go  dailyrequests.go  dailyrequests_create.go  dailyrequests_delete.go  dailyrequests_query.go  dailyrequests_update.go  tx.go  (+18 more)
database/table/: chunithm.go  pjsk.go
modules/: cache_coder.py  enums.py  redis.py
modules/schemas/: chunithm.py  pjsk.py  response.py
modules/sql/: engine.py
utils/: enum.go
utils/censor/: censor.go  client.go
utils/redis/: cache.go  clearcache.go  manager.go
utils/types/: chunithm.go  common.go  pjsk.go
(+251 files in other folders)
